remove print statements and default event payload

--- a/.gitignore
+++ b/.gitignore
@@ -82,10 +82,14 @@ celerybeat-schedule
 *.sage.py
 
 # Editor
-.vscode/*
+.vscode
+
+
+# Coogle Cloud Platform:
+crypto-manager-235417-bc2608491309_compute.json
 
 # Environments
-.env
+*.env
 .venv
 env/
 venv/
